--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,6 +13,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.network :forwarded_port, guest: 443, host: 7088
   config.vm.network :forwarded_port, guest: 9392, host: 9392
 
+  config.notify_forwarder.port = 30001
+
   config.vm.provision "shell" do |s|
     s.path = "bootstrap.sh"
   end
