--- a/app/deploy/sample.vagrant.settings.conf
+++ b/app/deploy/sample.vagrant.settings.conf
@@ -16,9 +16,9 @@ DEBUG_TB_ENABLED = False
 # REDIDROPPER_UPLOAD_SAVED_DIR = 'specify_full_path'
 
 # REDCap project configs
-REDCAP_API_URL = 'https://example.com/redcap/api/'
-REDCAP_API_TOKEN = 'change_me'
-REDCAP_DEMOGRAPHICS_SUBJECT_ID = 'z1_0e_subject_id'
+REDCAP_API_URL = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
+REDCAP_API_TOKEN = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
+REDCAP_DEMOGRAPHICS_SUBJECT_ID = 'ptid'
 REDCAP_CURL_API_MAX_TIME = 30  # seconds
 
 # This is generated automatically during deployment with fabric
