almost working, need to save salt

--- a/vagrant/apache-ssl.conf
+++ b/vagrant/apache-ssl.conf
@@ -24,6 +24,7 @@
         WSGIScriptReloading On
         WSGIProcessGroup dropper
         WSGIApplicationGroup %{GLOBAL}
+        WSGIPassAuthorization On
 
         Order allow,deny
         Allow from all
