--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,6 +4,14 @@
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
+#------------------------------------------------------------------------------
+  #Auto install required plugins
+#------------------------------------------------------------------------------
+required_plugins = %w(vagrant-notify-forwarder vagrant-triggers)
+required_plugins.each do |plugin|
+  system "vagrant plugin install #{plugin}" unless Vagrant.has_plugin? plugin
+end
+
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   #config.vm.box = "puphpet/debian75-x64"
   config.vm.box = "debian/jessie64"
@@ -22,11 +30,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Restart apache when all done (if using apache)
   config.vm.provision "shell", run: "always", inline: "service apache2 restart"
 
-  if Vagrant.has_plugin?('vagrant-triggers')
-    config.trigger.after [:up] do
-      if Vagrant::Util::Platform.darwin?
+  config.trigger.after [:up] do
+    if Vagrant::Util::Platform.darwin?
         system("open -a 'Google Chrome.app' https://localhost:7088")
-      end
     end
   end
 end
